--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<img src="images/logo.png" alt="Logo" style="height: 60px;">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -57,8 +57,8 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: training@orchard.com</p>
-            <p>Phone: +975-12345678</p>
+            <p>Email: namgayl@gmail.com</p>
+            <p>Phone: +975 77693169</p>
         </section>
     </main>
 
